--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@
   background-color: #9b59b6;
 }
 
+.bg-color-contact-form {
+  background-color: #fff;
+}
+
 /* Special paddings/margins/texts */
 
 h1,
@@ -333,4 +337,37 @@ footer .cv-pdf i:hover {
 
 .history-items {
   margin-bottom: 30px;
+}
+
+/* Contact Form */
+
+.contact-heading {
+  font-family: "Exo", sans-serif;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+.center-form {
+  padding-top: 10px;
+  margin: 0 auto;
+  max-width: 70%;
+}
+
+button[type="submit"] {
+  margin-top: 15px;
+  margin-bottom: 20px;
+  color: #fafafa;
+  background-color: #e84610;
+}
+
+/* Media Queries */
+
+@media (max-width: 992px) {
+  .center-form {
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+  }
 }
