--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,37 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700");
 
-/* Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
   background-color: #676767;
 }
 
 .bg-color-three-reasons {
-  background-color: #fff;
+  background-color: #ffffff;
+}
+
+.bg-color-personal-info {
+  background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+  background-color: #ffffff;
+}
+
+.bg-color-work-history {
+  background-color: #9b59b6;
+}
+
+.bg-color-contact {
+  background-color: #ffffff;
+}
+
+.bg-color-conferences {
+  background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+  background-color: #ffffff;
 }
 
 .ui-menu-color-home {
@@ -23,22 +47,25 @@
 }
 
 .ui-menu-color-download {
+  background-color: #d9a81d;
+}
+
+.ui-menu-color-github {
+  background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+  background-color: #e74c3c;
+}
+
+body {
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
   background-color: #525252;
+  color: #555555;
 }
 
-.bg-color-personal-info {
-  background-color: #f4f4f4;
-}
-
-.bg-color-work-history {
-  background-color: #9b59b6;
-}
-
-.bg-color-contact-form {
-  background-color: #fff;
-}
-
-/* Special paddings/margins/texts */
+/*--------------------------------------------Special Paddings/Margins/Text*/
 
 h1,
 h2,
@@ -65,12 +92,6 @@ h4 {
   display: table;
 }
 
-.section-column {
-  display: table-cell;
-  padding: 0 30px 30px;
-  float: none;
-}
-
 .history-heading,
 .section-heading {
   font-family: "Exo", sans-serif;
@@ -79,7 +100,7 @@ h4 {
   margin-bottom: 40px;
 }
 
-/* Heading */
+/*--------------------------------------------Heading*/
 
 header {
   margin: 0;
@@ -90,10 +111,10 @@ header {
 }
 
 .logo {
-  background: url("/assets/images/rosie.jpg");
+  background: url("../images/rosie.jpg");
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
   min-height: 360px;
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -101,28 +122,20 @@ header {
 }
 
 .name {
-  font-family: exo, sans-serif;
+  font-family: "Exo", sans-serif;
   font-weight: 100;
   font-size: 46px;
   margin-top: 50px;
-  color: #fff;
+  color: #ffffff;
 }
 
 .title {
-  font-family: roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 200;
   font-size: 28px;
   margin-top: 20px;
   margin-bottom: 90px;
-  color: #fff;
-}
-
-.list-inline-item:not(:last-child) {
-  margin: 0;
-}
-
-.menucontainer {
-  font-size: 0;
+  color: #ffffff;
 }
 
 #nav {
@@ -130,7 +143,6 @@ header {
 }
 
 #nav li {
-  font-size: 14px;
   padding: 0;
 }
 
@@ -143,7 +155,7 @@ header {
 .menuitem a {
   width: 100%;
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
   height: 120px;
 }
 
@@ -165,14 +177,14 @@ header {
   letter-spacing: 2px;
 }
 
-/* Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
   background: rgba(0, 0, 0, 0.2);
   height: 120px;
 }
 
-/* Footer */
+/*--------------------------------------------Footer*/
 
 footer {
   background-color: #525252;
@@ -182,18 +194,18 @@ footer {
 }
 
 footer .cv-pdf i {
-  font-size: 18px;
   color: #fafafa;
   text-align: center;
+  font-size: 18px;
   padding-left: 5px;
-  transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
 }
 
 footer .cv-pdf i:hover {
   color: #e84610;
+  transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
 }
 
 .social-links {
@@ -221,10 +233,10 @@ footer .cv-pdf i:hover {
 }
 
 #footer-details {
-  padding: 20px;
+  margin: 20px;
 }
 
-/* Three reasons */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
   font-size: 26px;
@@ -235,7 +247,7 @@ footer .cv-pdf i:hover {
   margin-bottom: 15px;
 }
 
-/* Personal Info */
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
   margin-bottom: 20px;
@@ -245,8 +257,7 @@ footer .cv-pdf i:hover {
 
 .personal-info-item .key,
 .personal-info-item .value {
-  padding-right: 5px;
-  display: inline-block;
+  padding-right: 8px;
 }
 
 .personal-info-item .key p,
@@ -255,6 +266,7 @@ footer .cv-pdf i:hover {
 }
 
 .personal-info-item .key {
+  display: inline-block;
   width: 30%;
   margin-right: 21px;
   padding-top: 2px;
@@ -266,16 +278,16 @@ footer .cv-pdf i:hover {
 }
 
 .personal-info-item .value {
+  display: inline-block;
   position: relative;
   width: 60%;
 }
 
-/* Skills */
+/*--------------------------------------------Skills*/
 
 .progress {
   position: relative;
   height: 25px;
-  margin-bottom: 4px;
 }
 
 .progress-type {
@@ -291,12 +303,7 @@ footer .cv-pdf i:hover {
   margin: 40px 20px;
 }
 
-/* Work History */
-
-.history-heading {
-  color: #fafafa;
-  margin-bottom: 50px;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
   padding: 4em 2em 0em 2em;
@@ -310,7 +317,7 @@ footer .cv-pdf i:hover {
   margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
   content: attr(data-dates);
   position: absolute;
   left: 2.5em;
@@ -323,7 +330,7 @@ footer .cv-pdf i:hover {
   margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
   width: 12px;
   height: 12px;
   display: block;
@@ -335,11 +342,16 @@ footer .cv-pdf i:hover {
   background: #fafafa;
 }
 
+.history-heading {
+  color: #fafafa;
+  margin-bottom: 50px;
+}
+
 .history-items {
   margin-bottom: 30px;
 }
 
-/* Contact Form */
+/*--------------------------------------------Contact*/
 
 .contact-heading {
   font-family: "Exo", sans-serif;
@@ -357,13 +369,24 @@ footer .cv-pdf i:hover {
 button[type="submit"] {
   margin-top: 15px;
   margin-bottom: 20px;
-  color: #fafafa;
   background-color: #e84610;
+  color: #fafafa;
 }
 
-/* Media Queries */
+/*--------------------------------------------Map*/
+div#map {
+  min-height: 360px;
+}
 
-@media (max-width: 992px) {
+/*--------------------------------------------Media Queries*/
+
+@media (min-width: 992px) {
+  .section-column {
+    padding: 0 30px 30px;
+    float: none;
+    display: table-cell;
+  }
+
   .center-form {
     padding-top: 30px;
     min-height: 240px;
